; ModuleID = '/home/carl/AnghaBench/mpv/audio/out/extr_ao_rsound.c_set_format.c'
source_filename = "/home/carl/AnghaBench/mpv/audio/out/extr_ao_rsound.c_set_format.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ao = type { i32 }

@RSD_U8 = common dso_local global i32 0, align 4
@RSD_S32_NE = common dso_local global i32 0, align 4
@RSD_S16_NE = common dso_local global i32 0, align 4
@AF_FORMAT_S16 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ao*)* @set_format to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @set_format(%struct.ao* %0) #0 {
  %2 = alloca %struct.ao*, align 8
  %3 = alloca i32, align 4
  store %struct.ao* %0, %struct.ao** %2, align 8
  %4 = load %struct.ao*, %struct.ao** %2, align 8
  %5 = getelementptr inbounds %struct.ao, %struct.ao* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  switch i32 %6, label %11 [
    i32 128, label %7
    i32 129, label %9
  ]

7:                                                ; preds = %1
  %8 = load i32, i32* @RSD_U8, align 4
  store i32 %8, i32* %3, align 4
  br label %16

9:                                                ; preds = %1
  %10 = load i32, i32* @RSD_S32_NE, align 4
  store i32 %10, i32* %3, align 4
  br label %16

11:                                               ; preds = %1
  %12 = load i32, i32* @RSD_S16_NE, align 4
  store i32 %12, i32* %3, align 4
  %13 = load i32, i32* @AF_FORMAT_S16, align 4
  %14 = load %struct.ao*, %struct.ao** %2, align 8
  %15 = getelementptr inbounds %struct.ao, %struct.ao* %14, i32 0, i32 0
  store i32 %13, i32* %15, align 4
  br label %16

16:                                               ; preds = %11, %9, %7
  %17 = load i32, i32* %3, align 4
  ret i32 %17
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
